implement synthetic buyer's preference

--- a/AI-real-estate-agent.ipynb
+++ b/AI-real-estate-agent.ipynb
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "18347053-7510-4a10-887c-d04f45bcfb73",
+   "execution_count": 116,
+   "id": "c598a04e-5c1c-4661-9186-a7de842cfb6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,24 @@
     "import pandas as pd\n",
     "import random\n",
     "import openai\n",
-    "from openai import OpenAI\n",
+    "import re\n",
+    "from openai import OpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "18347053-7510-4a10-887c-d04f45bcfb73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "with open('openai_api_key.txt', 'r') as file:\n",
     "    openai_api_key = file.read()\n",
     "\n",
     "prompt = \"\"\"\n",
-    "You are a real estate agent, there are many properties on the market for sale, including condo, apartment, house, ranch, mansion, and farmland.\n",
+    "You are a real estate agent, there are many properties on the market for sale, including condo, apartment, house, ranch, and mansion.\n",
     "The listing must include: neighborhood name, property type, price, size, number of bedrooms, number of bathrooms, description, neighborhood description.\n",
     "Use the following format:\n",
     "\n",
@@ -626,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 104,
    "id": "730fb23c-61a9-4972-82f9-290cd3222c2f",
    "metadata": {},
    "outputs": [],
@@ -637,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 105,
    "id": "cd274774-d0d3-400d-a73d-9aacfef0ba9d",
    "metadata": {},
    "outputs": [
@@ -678,40 +689,40 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>willow creek</td>\n",
-       "      <td>house</td>\n",
-       "      <td>$350,000</td>\n",
-       "      <td>2,000 sq ft</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>this charming 4 bedroom, 2.5 bathroom house in...</td>\n",
-       "      <td>willow creek is a family-friendly neighborhood...</td>\n",
-       "      <td>this charming 4 bedroom, 2.5 bathroom house in...</td>\n",
-       "      <td>[0.0067040585, 0.006078434, -0.0076392023, -0....</td>\n",
-       "      <td>1554.761963</td>\n",
+       "      <td>oakridge heights</td>\n",
+       "      <td>condo</td>\n",
+       "      <td>$300,000</td>\n",
+       "      <td>900 sqft</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>this cozy condo in oakridge heights offers a c...</td>\n",
+       "      <td>oakridge heights is a bustling neighborhood wi...</td>\n",
+       "      <td>this cozy condo in oakridge heights offers a c...</td>\n",
+       "      <td>[0.0158169, -0.0069433735, 0.009495323, -0.033...</td>\n",
+       "      <td>1532.858398</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  neighborhood_name property_type     price         size  num_bedrooms  \\\n",
-       "0      willow creek         house  $350,000  2,000 sq ft             4   \n",
+       "  neighborhood_name property_type     price      size  num_bedrooms  \\\n",
+       "0  oakridge heights         condo  $300,000  900 sqft             2   \n",
        "\n",
        "   num_bathrooms                                        description  \\\n",
-       "0            2.5  this charming 4 bedroom, 2.5 bathroom house in...   \n",
+       "0            1.0  this cozy condo in oakridge heights offers a c...   \n",
        "\n",
        "                            neighborhood_description  \\\n",
-       "0  willow creek is a family-friendly neighborhood...   \n",
+       "0  oakridge heights is a bustling neighborhood wi...   \n",
        "\n",
        "                                combined_description  \\\n",
-       "0  this charming 4 bedroom, 2.5 bathroom house in...   \n",
+       "0  this cozy condo in oakridge heights offers a c...   \n",
        "\n",
        "                                      ada_embeddings    _distance  \n",
-       "0  [0.0067040585, 0.006078434, -0.0076392023, -0....  1554.761963  "
+       "0  [0.0158169, -0.0069433735, 0.009495323, -0.033...  1532.858398  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +736,149 @@
    "id": "1f92d6c7-1bdf-4fbf-86f4-d90a786386f9",
    "metadata": {},
    "source": [
-    "# Step 4: Build a user interface to collect buyer preferences"
+    "# Step 4: Collect buyer preferences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "70507c55-53f2-4f7d-b65d-27385a4142a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate buyer preferences using gpt-3.5-turbo\n",
+    "average_buyer_prompt = \"\"\"\n",
+    "You are a real estate buyer, you are interetsed in buying either a house, a condo, or an apartment, but you can only choose one.\n",
+    "A real estate agent is helping you choosing a property listing that best suits your preferences.\n",
+    "\n",
+    "Answer the following questions:\n",
+    "\n",
+    "Questions:\n",
+    "What kind of property are you interested in buying?\n",
+    "What kind of neighborhood would you like to live in?\n",
+    "How many bedrooms and bathrooms do you need?\n",
+    "What amenities would you like?\n",
+    "\n",
+    "Answers:\n",
+    "\"\"\"\n",
+    "\n",
+    "high_net_value_buyer_prompt = \"\"\"\n",
+    "You are a high net value real estate buyer, you are interested in buying a mansion or a ranch, but you can only choose one.\n",
+    "A real estate agent is helping you choosing a property listing that best suits your preferences.\n",
+    "\n",
+    "Answer the following questions:\n",
+    "\n",
+    "Questions:\n",
+    "What kind of property are you interested in buying?\n",
+    "What kind of neighborhood would you like to live in?\n",
+    "How many bedrooms and bathrooms do you need?\n",
+    "What amenities would you like?\n",
+    "\n",
+    "Answers:\n",
+    "\"\"\"\n",
+    "\n",
+    "# create a list fo buyer prompts\n",
+    "buyer_prompt = [average_buyer_prompt, high_net_value_buyer_prompt]\n",
+    "\n",
+    "client = OpenAI(api_key=openai_api_key)\n",
+    "\n",
+    "def generate_buyer_preference(prompt):\n",
+    "    \"\"\"\n",
+    "    Using custom prompt to generate property listings\n",
+    "    from gpt-3.5-turbo model. \n",
+    "    \"\"\"\n",
+    "\n",
+    "    try:\n",
+    "        response = client.chat.completions.create(\n",
+    "            messages=[\n",
+    "                {\n",
+    "                    \"role\": \"user\",\n",
+    "                    \"content\": prompt,\n",
+    "                }\n",
+    "            ],\n",
+    "            model=\"gpt-3.5-turbo\",\n",
+    "            temperature = 1.0\n",
+    "        )\n",
+    "        return response.choices[0].message.content.strip()\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        return \"\"\n",
+    "def clean_buyer_preference(response):\n",
+    "    if \"\\n\\n\" in response:\n",
+    "        response = response.split(\"\\n\\n\")\n",
+    "    if \"\\n\" in response:\n",
+    "        response = response.split(\"\\n\")\n",
+    "    if \"?\" in response:\n",
+    "        response = [s.strip() for s in response if \"?\" not in s]\n",
+    "    result_response = \" \".join(response)\n",
+    "    # remove numerical bullet points in result_response\n",
+    "    result_response = re.sub(r'\\d+\\. ', '', result_response)\n",
+    "    # remove \"I [text] \" pattern\n",
+    "    cleaned_response = re.sub(r'I \\w+ ', '', result_response)\n",
+    "    return cleaned_response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "42fc463e-8942-4a94-a800-8352dc4edc6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1. I am interested in buying a house.\\n2. I would like to live in a quiet and safe neighborhood with good schools and access to parks or recreational areas.\\n3. I would need at least 3 bedrooms and 2 bathrooms.\\n4. I would like amenities such as a backyard, garage, updated kitchen, and maybe a fireplace.'"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = generate_buyer_preference(average_buyer_prompt)\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "26317b11-ebad-4e80-96ec-40ae669b0512",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'interested in buying a house. like to live in a quiet and safe neighborhood with good schools and access to parks or recreational areas. need at least 3 bedrooms and 2 bathrooms. like amenities such as a backyard, garage, updated kitchen, and maybe a fireplace.'"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_response = clean_buyer_preference(response)\n",
+    "cleaned_response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "a1a570eb-0056-4b22-98ea-35e2f45b5540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate 10 buyer preferneces and store them\n",
+    "num_of_samples = 10\n",
+    "buyer_preference_df = pd.DataFrame(columns=[\"cleaned_buyer_preference\", \"embeddings\"])\n",
+    "for i in range(num_of_samples):\n",
+    "    prompt = random.choice(buyer_prompt)\n",
+    "    response = generate_buyer_preference(prompt)\n",
+    "    cleaned_response = clean_buyer_preference(response)\n",
+    "    cleaned_response_embedding = get_embedding(cleaned_response)\n",
+    "    buyer_preference_df.loc[i, \"cleaned_buyer_preference\"] = cleaned_response\n",
+    "    buyer_preference_df.loc[i, \"embeddings\"] = cleaned_response_embedding"
    ]
   },
   {
@@ -733,14 +886,21 @@
    "id": "ddef4702-eeb6-477e-9fa0-2c43067262a6",
    "metadata": {},
    "source": [
-    "## Step 5: Search listings based on buyer's preference\n",
-    "## Step 6: Alter the retrieved listing's description with the buyer's preferences"
+    "# Step 5: Search listings based on buyer's preference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7383b03e-71a7-4213-bf5e-a4112f7c1ec1",
+   "metadata": {},
+   "source": [
+    "# Step 6: Alter the retrieved listing's description with the buyer's preferences"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fe9da15-81ed-4a08-b76c-8c10c0fcc4e7",
+   "id": "cd7845dc-62e1-4bd1-8c63-dbb1668afdb3",
    "metadata": {},
    "outputs": [],
    "source": []
