test search listings based on buyer's preference

--- a/AI-real-estate-agent.ipynb
+++ b/AI-real-estate-agent.ipynb
@@ -882,11 +882,287 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "ec7c17a2-a754-4e60-85c7-43cee35fc608",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "buyer_preference_df.to_csv(\"./buyer_preference_embeddings.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ddef4702-eeb6-477e-9fa0-2c43067262a6",
    "metadata": {},
    "source": [
     "# Step 5: Search listings based on buyer's preference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "2dcd3aed-16d9-46f4-bc86-27a8098e0155",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "interested in buying a house. like to live in a neighborhood with good schools, parks, and convenient access to amenities like grocery stores and restaurants. need at least 3 bedrooms and 2 bathrooms. like amenities such as a backyard, garage, and a spacious kitchen.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neighborhood_name</th>\n",
+       "      <th>property_type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>size</th>\n",
+       "      <th>num_bedrooms</th>\n",
+       "      <th>num_bathrooms</th>\n",
+       "      <th>description</th>\n",
+       "      <th>neighborhood_description</th>\n",
+       "      <th>combined_description</th>\n",
+       "      <th>ada_embeddings</th>\n",
+       "      <th>_distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>oakwood heights</td>\n",
+       "      <td>house</td>\n",
+       "      <td>$500,000</td>\n",
+       "      <td>2,500 sqft</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>this charming 4-bedroom, 3-bathroom house is p...</td>\n",
+       "      <td>oakwood heights is a quiet and family-friendly...</td>\n",
+       "      <td>this charming 4-bedroom, 3-bathroom house is p...</td>\n",
+       "      <td>[0.008564916, 0.014116251, -0.0142616425, -0.0...</td>\n",
+       "      <td>0.333131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>willow creek</td>\n",
+       "      <td>house</td>\n",
+       "      <td>$350,000</td>\n",
+       "      <td>2,000 sq ft</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>this charming 4 bedroom, 2.5 bathroom house in...</td>\n",
+       "      <td>willow creek is a family-friendly neighborhood...</td>\n",
+       "      <td>this charming 4 bedroom, 2.5 bathroom house in...</td>\n",
+       "      <td>[0.0067040585, 0.006078434, -0.0076392023, -0....</td>\n",
+       "      <td>0.340614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>maplewood</td>\n",
+       "      <td>apartment</td>\n",
+       "      <td>$300,000</td>\n",
+       "      <td>900 sqft</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>this charming apartment in the heart of maplew...</td>\n",
+       "      <td>maplewood is a vibrant and family-friendly nei...</td>\n",
+       "      <td>this charming apartment in the heart of maplew...</td>\n",
+       "      <td>[-0.0019368312, -0.005045743, 0.0059570037, -0...</td>\n",
+       "      <td>0.354642</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  neighborhood_name property_type     price         size  num_bedrooms  \\\n",
+       "0   oakwood heights         house  $500,000   2,500 sqft             4   \n",
+       "1      willow creek         house  $350,000  2,000 sq ft             4   \n",
+       "2         maplewood     apartment  $300,000     900 sqft             2   \n",
+       "\n",
+       "   num_bathrooms                                        description  \\\n",
+       "0            3.0  this charming 4-bedroom, 3-bathroom house is p...   \n",
+       "1            2.5  this charming 4 bedroom, 2.5 bathroom house in...   \n",
+       "2            1.0  this charming apartment in the heart of maplew...   \n",
+       "\n",
+       "                            neighborhood_description  \\\n",
+       "0  oakwood heights is a quiet and family-friendly...   \n",
+       "1  willow creek is a family-friendly neighborhood...   \n",
+       "2  maplewood is a vibrant and family-friendly nei...   \n",
+       "\n",
+       "                                combined_description  \\\n",
+       "0  this charming 4-bedroom, 3-bathroom house is p...   \n",
+       "1  this charming 4 bedroom, 2.5 bathroom house in...   \n",
+       "2  this charming apartment in the heart of maplew...   \n",
+       "\n",
+       "                                      ada_embeddings  _distance  \n",
+       "0  [0.008564916, 0.014116251, -0.0142616425, -0.0...   0.333131  \n",
+       "1  [0.0067040585, 0.006078434, -0.0076392023, -0....   0.340614  \n",
+       "2  [-0.0019368312, -0.005045743, 0.0059570037, -0...   0.354642  "
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test a average buyer\n",
+    "print(buyer_preference_df.iloc[0]['cleaned_buyer_preference'])\n",
+    "query = buyer_preference_df.iloc[0]['embeddings']\n",
+    "table.search(query).limit(3).to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "0294f378-b983-437e-9a32-2ec5c215c228",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "interested in buying a mansion. like to live in a neighborhood that is upscale, safe, and with beautiful scenic views. like at least 5 bedrooms and 5 bathrooms. like amenities such as a pool, a large outdoor entertaining space, a home gym, a wine cellar, and a spacious chef's kitchen.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neighborhood_name</th>\n",
+       "      <th>property_type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>size</th>\n",
+       "      <th>num_bedrooms</th>\n",
+       "      <th>num_bathrooms</th>\n",
+       "      <th>description</th>\n",
+       "      <th>neighborhood_description</th>\n",
+       "      <th>combined_description</th>\n",
+       "      <th>ada_embeddings</th>\n",
+       "      <th>_distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bel air</td>\n",
+       "      <td>mansion</td>\n",
+       "      <td>$15,000,000</td>\n",
+       "      <td>10,000 sqft</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>this luxurious mansion in the exclusive neighb...</td>\n",
+       "      <td>bel air is known for its affluent residents, u...</td>\n",
+       "      <td>this luxurious mansion in the exclusive neighb...</td>\n",
+       "      <td>[0.006617324, 0.0033311045, 0.0016222703, -0.0...</td>\n",
+       "      <td>0.274717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>willow creek estates</td>\n",
+       "      <td>mansion</td>\n",
+       "      <td>$3,500,000</td>\n",
+       "      <td>10,000 sqft</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>this stunning mansion is a true masterpiece, b...</td>\n",
+       "      <td>willow creek estates is a prestigious and excl...</td>\n",
+       "      <td>this stunning mansion is a true masterpiece, b...</td>\n",
+       "      <td>[0.0046979873, 0.0049256873, -0.004929036, -0....</td>\n",
+       "      <td>0.286423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>bel air</td>\n",
+       "      <td>mansion</td>\n",
+       "      <td>$20,000,000</td>\n",
+       "      <td>15,000 sqft</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>this luxurious mansion in bel air offers unpar...</td>\n",
+       "      <td>bel air is one of the most prestigious and exc...</td>\n",
+       "      <td>this luxurious mansion in bel air offers unpar...</td>\n",
+       "      <td>[0.007657449, 0.0015685107, -0.008248482, -0.0...</td>\n",
+       "      <td>0.290762</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      neighborhood_name property_type        price         size  num_bedrooms  \\\n",
+       "0               bel air       mansion  $15,000,000  10,000 sqft             6   \n",
+       "1  willow creek estates       mansion   $3,500,000  10,000 sqft             6   \n",
+       "2               bel air       mansion  $20,000,000  15,000 sqft             8   \n",
+       "\n",
+       "   num_bathrooms                                        description  \\\n",
+       "0            8.0  this luxurious mansion in the exclusive neighb...   \n",
+       "1            8.0  this stunning mansion is a true masterpiece, b...   \n",
+       "2           10.0  this luxurious mansion in bel air offers unpar...   \n",
+       "\n",
+       "                            neighborhood_description  \\\n",
+       "0  bel air is known for its affluent residents, u...   \n",
+       "1  willow creek estates is a prestigious and excl...   \n",
+       "2  bel air is one of the most prestigious and exc...   \n",
+       "\n",
+       "                                combined_description  \\\n",
+       "0  this luxurious mansion in the exclusive neighb...   \n",
+       "1  this stunning mansion is a true masterpiece, b...   \n",
+       "2  this luxurious mansion in bel air offers unpar...   \n",
+       "\n",
+       "                                      ada_embeddings  _distance  \n",
+       "0  [0.006617324, 0.0033311045, 0.0016222703, -0.0...   0.274717  \n",
+       "1  [0.0046979873, 0.0049256873, -0.004929036, -0....   0.286423  \n",
+       "2  [0.007657449, 0.0015685107, -0.008248482, -0.0...   0.290762  "
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test a high net value buyer\n",
+    "print(buyer_preference_df.iloc[1]['cleaned_buyer_preference'])\n",
+    "query = buyer_preference_df.iloc[1]['embeddings']\n",
+    "table.search(query).limit(3).to_pandas()"
    ]
   },
   {
@@ -896,6 +1172,14 @@
    "source": [
     "# Step 6: Alter the retrieved listing's description with the buyer's preferences"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cadf958-59c7-4965-b955-d1330dee1976",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
