--- a/AI-real-estate-agent.ipynb
+++ b/AI-real-estate-agent.ipynb
@@ -1355,9 +1355,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7498f7c4-8a51-46f6-b807-2faef5b410f8",
+   "metadata": {},
+   "source": [
+    "# Step 7: Implement user interface as app"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "497044ea-125f-4799-8970-0fc6ecd5d3e9",
+   "id": "b01d8a99-c226-483f-a250-53f15895cd73",
    "metadata": {},
    "outputs": [],
    "source": []
